cm4all-beng-proxy (0.7.11) unstable; urgency=low

  * {ajp,memcached}-client: fix disappearing event for duplex socket
  * memcached-client: handle EAGAIN after send()
  * header-forward: don't forward Accept-Encoding if transformation is
    enabled
  * widget-http, inline-widget: check Content-Encoding before processing
  * file-handler: send "Vary: Accept-Encoding" for compressed response
  * header-forward: support duplicate headers
  * fcache: implemented a 60 seconds timeout

 --

cm4all-beng-proxy (0.7.10) unstable; urgency=low

  * http-{server,client}: fix disappearing event for duplex socket

 -- Max Kellermann <mk@cm4all.com>  Mon, 14 Dec 2009 15:46:25 +0100

cm4all-beng-proxy (0.7.9) unstable; urgency=low

  * http: "Expect" is a hop-by-hop header
  * http-server: send "100 Continue" unless request body closed
  * http-client: poll socket after splice
  * http-server: handle EAGAIN after splice
  * http-server: send a 417 response on unrecognized "Expect" request
  * response, widget-http: append filter id to resource tag
  * resource-tag: check for "Cache-Control: no-store"

 -- Max Kellermann <mk@cm4all.com>  Mon, 14 Dec 2009 13:05:15 +0100

cm4all-beng-proxy (0.7.8) unstable; urgency=low

  * http-body: support partial response in method available()
  * file-handler: support pre-compressed static files
  * fcache: honor the "Cache-Control: no-store" response header

 -- Max Kellermann <mk@cm4all.com>  Wed, 09 Dec 2009 15:49:25 +0100

cm4all-beng-proxy (0.7.7) unstable; urgency=low

  * parser: allow underscore in attribute names
  * processor: check "type" attribute before URI rewriting
  * http-client: start receiving before request is sent
  * http-client: try to read response after write error
  * http-client: deliver response body after headers are finished
  * http-client: release socket as early as possible
  * http-client: serve buffer after socket has been closed
  * istream-chunked: clear input stream in abort handler